# PickOne_Centralized

./: .env  .env.local  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs  metrics.rs  signals.rs  state.rs  utilities.rs
backend/src/api/: consumer.rs  database.rs  handlers.rs  lock.rs  meilisearch.rs  mod.rs  models.rs  redis.rs  sessions.rs  twofactor.rs  utilities.rs  verify.rs
backend/src/api/bot/: chat.rs  photo.rs  preprocessing.rs  redis.rs  utilities.rs
backend/src/api/microservices/: cdc.rs  meilisearch.rs  mod.rs  redis.rs
backend/src/api/microservices/database/: core.rs  init.rs  mod.rs  schema.rs
backend/src/api/web/: cookies.rs  handlers.rs  home.rs  lock.rs  locks.rs  mod.rs  models.rs  sessions.rs  swap.rs  twofactor.rs  utilities.rs  verify.rs
backend/src/api/web/housing/: models.rs
backend/src/api/web/swap/: cdc.rs  database.rs  handlers.rs  redis.rs  utilities.rs
backend/src/bot/: chat.rs  mod.rs  models.rs  photo.rs  preprocessing.rs  redis.rs  state.rs  utilities.rs
backend/src/microservices/: cdc.rs  database.rs  meilisearch.rs
backend/src/microservices/cdc/: consumer.rs  consumer_utils.rs  core.rs  mod.rs  utilities.rs
backend/src/web/: cookies.rs  handlers.rs  locks.rs  sessions.rs  twofactor.rs  utilities.rs  verify.rs
backend/src/web/housing/: cdc.rs  database.rs  handlers.rs  init.rs  init_utils.rs  mod.rs  models.rs  schema.rs  verify.rs
backend/src/web/swap/: cdc.rs  database.rs  handlers.rs  init.rs  mod.rs  models.rs  redis.rs  schema.rs  utilities.rs  verify.rs
(+215 files in other folders)
