[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.7" }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
cookie = "0.18.1"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.17", features = ["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }
meilisearch-sdk = "0.28.0"
num_enum = "0.7.4"
once_cell = "1"
prometheus = "0.13"
rand = "0.8"
redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }
regex = "1"
rustrict = "0.7.35"
scylla = { version = "1.2.0", features = ["chrono-04"] }
scylla-cdc = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
